--- a/src/Components/Common/Css/Wallet.css
+++ b/src/Components/Common/Css/Wallet.css
@@ -1,144 +1,159 @@
 .flip-card {
-    background-color: transparent;
-    width: 340px;
-    height: 224px;
-    perspective: 1000px;
-    color: white;
-  }
-  
-  .heading_8264 {
-    position: absolute;
-    letter-spacing: .2em;
-    font-size: .9em;
-    top: 1.3em;
-    left: 12.6em;
-  }
-  
-  .logo {
-    position: absolute;
-    top: 9.3em;
-    left: 15.8em;
-  }
-  
-  .chip {
-    position: absolute;
-    top: 2.3em;
-    left: 1.5em;
-  }
-  
-  .contactless {
-    position: absolute;
-    top: 3.5em;
-    left: 12.4em;
-  }
-  
-  .number {
-    position: absolute;
-    font-weight: bold;
-    font-size: 1.5em;
-    top: 3.3em;
-    left: 6.6em;
-  }
-  
-  .valid_thru {
-    position: absolute;
-    font-weight: bold;
-    font-size: .7em;
-    top: 12em;
-    left: 3.5em;
-  }
-  
-  .date_8264 {
-    position: absolute;
-    font-weight: bold;
-    font-size: .7em;
-    top: 13.5em;
-    left: 4em;
-  }
-  
-  .name {
-    position: absolute;
-    font-weight: bold;
-    font-size: 1em;
-    top: 11.5em;
-    left: 2em;
-  }
-  
-  .strip {
-    position: absolute;
-    background-color: black;
-    width: 21.2em;
-    height: 2em;
-    top: 2.4em;
-    background: repeating-linear-gradient(
-      45deg,
-      #303030,
-      #303030 10px,
-      #202020 10px,
-      #202020 20px
-    );
-  }
-  
-  .mstrip {
-    position: absolute;
-    background-color: rgb(255, 255, 255);
-    width: 12em;
-    height: 1.5em;
-    top: 5em;
-    left: .8em;
-    border-radius: 2.5px;
-  }
-  
-  .sstrip {
-    position: absolute;
-    background-color: rgb(255, 255, 255);
-    width: 4.1em;
-    height: 1.5em;
-    top: 5em;
-    left: 14em;
-    border-radius: 2.5px;
-  }
-  
-  .code {
-    font-weight: bold;
-    text-align: center;
-    margin: .2em;
-    color: black;
-  }
-  
-  .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-  }
-  
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-  
-  .flip-card-front, .flip-card-back {
-    box-shadow: 0 8px 14px 0 rgba(0,0,0,0.2);
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    border-radius: 1rem;
-  }
-  
-  .flip-card-front {
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 2px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
-    /* background-image: linear-gradient(to right, #C63D2F, #FF9B50); */
-  }
-  
-  .flip-card-back {
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 2px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
-    /* background-image: linear-gradient(to right, #C63D2F, #FF9B50); */
-    transform: rotateY(180deg);
-  }
+  background-color: transparent;
+  width: 340px;
+  height: 224px;
+  perspective: 1000px;
+  color: white;
+}
+
+.heading_8264 {
+  position: absolute;
+  letter-spacing: 0.2em;
+  font-size: 0.9em;
+  top: 1.3em;
+  left: 12.6em;
+}
+
+.logo {
+  position: absolute;
+  top: 9.3em;
+  left: 15.8em;
+}
+
+.chip {
+  position: absolute;
+  top: 2.3em;
+  left: 1.5em;
+}
+
+.contactless {
+  position: absolute;
+  top: 3.5em;
+  left: 12.4em;
+}
+
+.number {
+  position: absolute;
+  font-weight: bold;
+  font-size: 1.5em;
+  top: 3.3em;
+  left: 6.6em;
+}
+
+.valid_thru {
+  position: absolute;
+  font-weight: bold;
+  font-size: 0.7em;
+  top: 12em;
+  left: 3.5em;
+}
+
+.date_8264 {
+  position: absolute;
+  font-weight: bold;
+  font-size: 0.7em;
+  top: 13.5em;
+  left: 4em;
+}
+
+.name {
+  position: absolute;
+  font-weight: bold;
+  font-size: 1em;
+  top: 11.5em;
+  left: 2em;
+}
+
+.strip {
+  position: absolute;
+  background-color: black;
+  width: 21.2em;
+  height: 2em;
+  top: 2.4em;
+  background: repeating-linear-gradient(
+    45deg,
+    #303030,
+    #303030 10px,
+    #202020 10px,
+    #202020 20px
+  );
+}
+
+.mstrip {
+  position: absolute;
+  background-color: rgb(255, 255, 255);
+  width: 12em;
+  height: 1.5em;
+  top: 5em;
+  left: 0.8em;
+  border-radius: 2.5px;
+}
+
+.sstrip {
+  position: absolute;
+  background-color: rgb(255, 255, 255);
+  width: 4.1em;
+  height: 1.5em;
+  top: 5em;
+  left: 14em;
+  border-radius: 2.5px;
+}
+
+.code {
+  font-weight: bold;
+  text-align: center;
+  margin: 0.2em;
+  color: black;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  box-shadow: 0 8px 14px 0 rgba(0, 0, 0, 0.2);
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-radius: 1rem;
+}
+
+.flip-card-front {
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 2px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
+  /* background-image: linear-gradient(to right, #C63D2F, #FF9B50); */
+}
+
+.flip-card-back {
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 2px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
+  /* background-image: linear-gradient(to right, #C63D2F, #FF9B50); */
+  transform: rotateY(180deg);
+}
+
+
+
+/* Radio Buttons */
+.input {
+  display: flex;
+  flex-direction: row;
+  width: 800px;
+  border-radius: 5px;
+  align-items: center;
+}
+
