--- a/src/Components/Traveler/Css/BlogCard.css
+++ b/src/Components/Traveler/Css/BlogCard.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     padding: 10px 20px;
+    height: 400px;
   }
   
   .avatar {
@@ -17,15 +18,21 @@
     
   }
   
-  .title {
-    font-size: 20px;
-    line-height: 22px;
-    font-weight: 600;
-    margin-top: 10px;
-    color: #fff;
-    text-decoration: none;
-    transition: all .35s ease-in;
-  }
+ .title {
+  font-size: 20px;
+  /* line-height: 22px; */
+  font-weight: 600;
+  margin-top: 10px;
+  color: #fff;
+  text-decoration: none;
+  transition: all .35s ease-in;
+  cursor: pointer;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 300px; /* Set the max-width according to your layout */
+}
+
   
   .title:hover {
     text-decoration: underline blueviolet;
@@ -35,6 +42,11 @@
     font-size: 12px;
     color: rgb(168 179 207);
     margin: 10px 0;
+  }
+
+  .imagedesign {
+    height: 220px;
+    object-fit: cover;
   }
   
   .image-preview {
